--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,32 +4,24 @@ S3method("[",ddArray)
 S3method("[",ddSim)
 S3method(aic,dd)
 S3method(aic,ddArray)
-S3method(cof2parms,dmod)
-S3method(cof2parms,glm)
+S3method(cof2parms,dd)
 S3method(cof2parms,matrix)
 S3method(cof2parms,numeric)
-S3method(ddInit,data.frame)
-S3method(ddInit,dmod)
 S3method(ddSim,dd)
-S3method(ddSim,dmod)
 S3method(plot,dd)
 S3method(plot,ddArray)
 S3method(print,dd)
 S3method(print,ddArray)
-S3method(print,dmod)
-S3method(summary,dd)
-S3method(summary,ddArray)
-S3method(tfit,dmod)
+S3method(stats,dd)
+S3method(stats,ddArray)
 export(aic)
-export(canFit)
 export(cof2parms)
 export(cofOK)
 export(dPare1)
 export(dRay)
 export(dd2ddSim)
-export(ddArray)
 export(ddCI)
-export(ddInit)
+export(ddFit)
 export(ddSim)
 export(ddd)
 export(digam)
@@ -42,7 +34,6 @@ export(erf)
 export(estDWP)
 export(exclude)
 export(lQint)
-export(llik_fun)
 export(off)
 export(pPare1)
 export(pRay)
@@ -61,4 +52,4 @@ export(rcd)
 export(rdd)
 export(readLayout)
 export(rmat)
-export(tfit)
+export(stats)
