--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,26 @@
 Package: dwp
 Type: Package
 Title: What the package does (short line)
-Version: 0.0.1.2
-Date: 2020-10-19
+Version: 0.0.1.3
+Date: 2020-11-05
 Author: Who wrote it
 Maintainer: Who to complain to <ddalthorp@usgs.gov>
 Description: More about what it does (maybe more than one line)
+Depends: R (>= 3.6.1)
 License: CC0
 LazyData: true
 Encoding: UTF-8
 Imports:
     expint,
     GenEst,
+    gpclib,
     gtools,
     invgamma,
+    MASS, 
     matrixStats,
     mvtnorm,
     numDeriv,
+    plotrix,
     sf,
     statmod
 RoxygenNote: 6.1.1
