--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,48 +8,63 @@ S3method(cof2parms,dd)
 S3method(cof2parms,matrix)
 S3method(cof2parms,numeric)
 S3method(ddSim,dd)
+S3method(estdwp,psiHat)
+S3method(estpsi,data.frame)
+S3method(estpsi,tlist)
 S3method(plot,dd)
 S3method(plot,ddArray)
+S3method(plot,layoutSimple)
 S3method(print,dd)
 S3method(print,ddArray)
 S3method(stats,dd)
 S3method(stats,ddArray)
+export(Acins)
+export(addCarc)
 export(aic)
 export(cof2parms)
 export(cofOK)
-export(dPare1)
-export(dRay)
 export(dd2ddSim)
 export(ddCI)
 export(ddFit)
 export(ddSim)
 export(ddd)
-export(digam)
-export(dlogC)
-export(dlogL)
-export(dlogQ)
 export(dmb)
-export(dpng)
+export(dxep0)
+export(dxep012)
+export(dxep0123)
+export(dxep02)
+export(dxep1)
+export(dxep12)
+export(dxep123)
+export(dxep2)
+export(dxepi0)
 export(erf)
-export(estDWP)
+export(estdwp)
+export(estpsi)
 export(exclude)
+export(incGamma)
 export(lQint)
 export(off)
-export(pPare1)
-export(pRay)
 export(par_reset)
 export(pdd)
-export(pigam)
-export(plogC)
-export(plogL)
-export(plogQ)
 export(pmb)
-export(ppng)
 export(prepRing)
+export(prepRing_polygon)
 export(prepRing_r)
+export(prepRing_simple)
+export(pxep0)
+export(pxep012)
+export(pxep0123)
+export(pxep02)
+export(pxep1)
+export(pxep12)
+export(pxep123)
+export(pxep2)
+export(pxepi0)
 export(qdd)
 export(rcd)
 export(rdd)
 export(readLayout)
+export(readLayout_polygons)
 export(rmat)
 export(stats)
