--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,27 +2,38 @@
 
 S3method("[",ddArray)
 S3method("[",ddSim)
+S3method(addCarcass,data.frame)
+S3method(addCarcass,shapeCarcass)
 S3method(aic,dd)
 S3method(aic,ddArray)
 S3method(cof2parms,dd)
 S3method(cof2parms,matrix)
 S3method(cof2parms,numeric)
+S3method(ddFit,data.frame)
+S3method(ddFit,list)
+S3method(ddFit,rings)
+S3method(ddFit,xyLayout)
 S3method(ddSim,dd)
 S3method(estdwp,psiHat)
 S3method(estpsi,data.frame)
-S3method(estpsi,tlist)
+S3method(estpsi,rpA)
+S3method(estpsi,xyLayout)
 S3method(plot,dd)
 S3method(plot,ddArray)
 S3method(plot,layoutSimple)
+S3method(prepRing,shapeLayout)
+S3method(prepRing,simpleLayout)
 S3method(print,dd)
 S3method(print,ddArray)
 S3method(stats,dd)
 S3method(stats,ddArray)
 export(Acins)
-export(addCarc)
+export(addCarcass)
 export(aic)
 export(cof2parms)
 export(cofOK)
+export(cofOK0)
+export(cofOKInf)
 export(dd2ddSim)
 export(ddCI)
 export(ddFit)
@@ -49,8 +60,6 @@ export(par_reset)
 export(pdd)
 export(pmb)
 export(prepRing)
-export(prepRing_polygon)
-export(prepRing_r)
 export(prepRing_simple)
 export(pxep0)
 export(pxep012)
@@ -64,6 +73,7 @@ export(pxepi0)
 export(qdd)
 export(rcd)
 export(rdd)
+export(readCarcass)
 export(readLayout)
 export(readLayout_polygons)
 export(rmat)
