--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,24 +12,44 @@ S3method(cof2parms,numeric)
 S3method(ddFit,data.frame)
 S3method(ddFit,list)
 S3method(ddFit,rings)
+S3method(ddFit,ringscc)
 S3method(ddFit,xyLayout)
 S3method(ddSim,dd)
 S3method(estdwp,psiHat)
+S3method(estdwp,psiHatcc)
 S3method(estpsi,data.frame)
+S3method(estpsi,rings)
+S3method(estpsi,ringscc)
 S3method(estpsi,rpA)
 S3method(estpsi,xyLayout)
+S3method(getncarc,dd)
+S3method(getncarc,ddArray)
+S3method(getncarc,ddArraycc)
+S3method(getncarc,rings)
+S3method(getncarc,ringscc)
+S3method(getncarc,xyLayout)
 S3method(plot,dd)
 S3method(plot,ddArray)
+S3method(plot,dwphat)
 S3method(plot,layoutSimple)
+S3method(plot,psiHat)
+S3method(prepRing,numeric)
+S3method(prepRing,polygonLayout)
 S3method(prepRing,shapeLayout)
 S3method(prepRing,simpleLayout)
 S3method(print,dd)
 S3method(print,ddArray)
 S3method(stats,dd)
 S3method(stats,ddArray)
+S3method(stats,ddArraycc)
+S3method(subset,shapeCarcass)
+S3method(subset,shapeLayout)
 export(Acins)
+export(MCI)
+export(MpriorOK)
 export(addCarcass)
 export(aic)
+export(calcMstar)
 export(cof2parms)
 export(cofOK)
 export(cofOK0)
@@ -53,14 +73,21 @@ export(erf)
 export(estdwp)
 export(estpsi)
 export(exclude)
+export(exportGenEst)
+export(fmmax)
+export(fmmax.ab)
+export(formatGenEst)
+export(getncarc)
 export(incGamma)
+export(initLayout)
 export(lQint)
 export(off)
 export(par_reset)
 export(pdd)
 export(pmb)
+export(postM)
+export(postM.ab)
 export(prepRing)
-export(prepRing_simple)
 export(pxep0)
 export(pxep012)
 export(pxep0123)
@@ -74,7 +101,5 @@ export(qdd)
 export(rcd)
 export(rdd)
 export(readCarcass)
-export(readLayout)
-export(readLayout_polygons)
 export(rmat)
 export(stats)
