--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: dwp
 Type: Package
 Title: What the package does (short line)
-Version: 0.0.2.0
-Date: 2020-11-05
+Version: 0.0.2.1
+Date: 2020-11-18
 Author: Who wrote it
 Maintainer: Who to complain to <ddalthorp@usgs.gov>
 Description: More about what it does (maybe more than one line)
-Depends: R (>= 3.6.1)
+Depends: R (>= 3.6.1), magrittr
 License: CC0
 LazyData: true
 Encoding: UTF-8
