--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(addCarcass,data.frame)
 S3method(addCarcass,shapeCarcass)
 S3method(aic,dd)
 S3method(aic,ddArray)
+S3method(aic,ddArraycc)
 S3method(cof2parms,dd)
 S3method(cof2parms,matrix)
 S3method(cof2parms,numeric)
@@ -18,6 +19,7 @@ S3method(ddSim,dd)
 S3method(estdwp,psiHat)
 S3method(estdwp,psiHatcc)
 S3method(estpsi,data.frame)
+S3method(estpsi,rdat)
 S3method(estpsi,rings)
 S3method(estpsi,ringscc)
 S3method(estpsi,rpA)
@@ -32,6 +34,7 @@ S3method(plot,dd)
 S3method(plot,ddArray)
 S3method(plot,dwphat)
 S3method(plot,layoutSimple)
+S3method(plot,polygonLayout)
 S3method(plot,psiHat)
 S3method(prepRing,numeric)
 S3method(prepRing,polygonLayout)
@@ -69,7 +72,6 @@ export(dxep12)
 export(dxep123)
 export(dxep2)
 export(dxepi0)
-export(erf)
 export(estdwp)
 export(estpsi)
 export(exclude)
@@ -80,14 +82,14 @@ export(formatGenEst)
 export(getncarc)
 export(incGamma)
 export(initLayout)
-export(lQint)
+export(modelFilter)
 export(off)
-export(par_reset)
 export(pdd)
 export(pmb)
 export(postM)
 export(postM.ab)
 export(prepRing)
+export(prepmod)
 export(pxep0)
 export(pxep012)
 export(pxep0123)
@@ -103,3 +105,43 @@ export(rdd)
 export(readCarcass)
 export(rmat)
 export(stats)
+importFrom(grDevices,colors)
+importFrom(graphics,axis)
+importFrom(graphics,box)
+importFrom(graphics,legend)
+importFrom(graphics,lines)
+importFrom(graphics,mtext)
+importFrom(graphics,par)
+importFrom(graphics,points)
+importFrom(graphics,polygon)
+importFrom(graphics,rect)
+importFrom(graphics,text)
+importFrom(magrittr,"%<>%")
+importFrom(magrittr,"%>%")
+importFrom(methods,as)
+importFrom(methods,is)
+importFrom(stats,aggregate)
+importFrom(stats,approxfun)
+importFrom(stats,dbinom)
+importFrom(stats,dchisq)
+importFrom(stats,dexp)
+importFrom(stats,dgamma)
+importFrom(stats,dlnorm)
+importFrom(stats,dnorm)
+importFrom(stats,formula)
+importFrom(stats,glm)
+importFrom(stats,integrate)
+importFrom(stats,pbinom)
+importFrom(stats,pchisq)
+importFrom(stats,pexp)
+importFrom(stats,pgamma)
+importFrom(stats,plnorm)
+importFrom(stats,pnorm)
+importFrom(stats,quantile)
+importFrom(stats,rnorm)
+importFrom(stats,runif)
+importFrom(stats,uniroot)
+importFrom(stats,var)
+importFrom(utils,flush.console)
+importFrom(utils,read.csv)
+importFrom(utils,write.csv)
