--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,28 +1,32 @@
 Package: dwp
 Type: Package
-Title: What the package does (short line)
-Version: 0.0.2.1
-Date: 2020-11-18
-Author: Who wrote it
-Maintainer: Who to complain to <ddalthorp@usgs.gov>
-Description: More about what it does (maybe more than one line)
-Depends: R (>= 3.6.1), magrittr
+Title: Estimate the Fraction of Wind Turbine-Killed Bird or Bat Carcasses that Fall in the Area Searched
+Version: 0.0.3.0
+Date: 2020-11-27
+Authors@R: c(
+    person("Daniel", "Dalthorp", , "ddalthorp@protonmail.com", c("aut", "cre")),
+    person("Manuela", "Huso", , "mhuso@usgs.gov", "aut"))
+Description: Fit a Poisson regression to carcass distance data and integrate over the searched area at a wind farm to estimate the fraction of carcasses falling in the searched area and format the output for use as the dwp parameter in the GenEst package for estimating bird and bat mortality.
+Depends: R (>= 3.6.0)
 License: CC0
 LazyData: true
 Encoding: UTF-8
 Imports:
+    boot,
     expint,
     GenEst,
     gpclib,
     gtools,
     invgamma,
+    magrittr,
     MASS, 
     matrixStats,
+    methods,
     mvtnorm,
     numDeriv,
     plotrix,
+    pracma,
     sf,
-    statmod
-RoxygenNote: 6.1.1
-Suggests: 
-    testthat (>= 2.1.0)
+    statmod,
+    VGAM
+RoxygenNote: 7.1.1
