--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ S3method(getncarc,xyLayout)
 S3method(plot,dd)
 S3method(plot,ddArray)
 S3method(plot,dwphat)
+S3method(plot,fmod)
 S3method(plot,layoutSimple)
 S3method(plot,polygonLayout)
 S3method(plot,psiHat)
@@ -42,6 +43,7 @@ S3method(prepRing,shapeLayout)
 S3method(prepRing,simpleLayout)
 S3method(print,dd)
 S3method(print,ddArray)
+S3method(print,fmod)
 S3method(stats,dd)
 S3method(stats,ddArray)
 S3method(stats,ddArraycc)
