--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ S3method(getncarc,ddArraycc)
 S3method(getncarc,rings)
 S3method(getncarc,ringscc)
 S3method(getncarc,xyLayout)
+S3method(parms2cof,matrix)
 S3method(plot,dd)
 S3method(plot,ddArray)
 S3method(plot,dwphat)
@@ -85,13 +86,16 @@ export(getncarc)
 export(incGamma)
 export(initLayout)
 export(modelFilter)
+export(mpp2ddSim)
 export(off)
+export(parOK)
 export(pdd)
 export(pmb)
 export(postM)
 export(postM.ab)
 export(prepRing)
 export(prepmod)
+export(psi_extend)
 export(pxep0)
 export(pxep012)
 export(pxep0123)
