--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,11 @@ language: r
 cache: packages
 sudo: false
 warnings_are_errors: false
-
+before_install:
+    - gem install rake
+    - sudo apt-get install libgsl-dev
+    - sudo apt-get install make cmake gcc git libcurl4-openssl-dev
+    - sudo apt install libudunits2-dev
 addons:
   apt:
     update: true
