--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: dwp
 Type: Package
 Title: Estimate the Fraction of Wind Turbine-Killed Bird or Bat Carcasses that Fall in the Area Searched
-Version: 1.0.2
-Date: 2022-01-07
+Version: 1.0.3
+Date: 2022-01-20
 Authors@R: c(
     person("Daniel", "Dalthorp", , "ddalthorp@protonmail.com", c("aut", "cre")),
     person("Manuela", "Huso", , "mhuso@usgs.gov", "aut"))
@@ -15,7 +15,6 @@ Imports:
     boot,
     expint,
     GenEst,
-    gpclib,
     gtools,
     invgamma,
     magrittr,
@@ -29,4 +28,6 @@ Imports:
     sf,
     statmod,
     VGAM
+Suggests:
+    gpclib
 RoxygenNote: 7.1.2
