Committing all changes from e:\D\distance\package\dwp before merging

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ S3method(getncarc,rings)
 S3method(getncarc,ringscc)
 S3method(getncarc,xyLayout)
 S3method(parms2cof,matrix)
+S3method(parms2cof,numeric)
 S3method(plot,dd)
 S3method(plot,ddArray)
 S3method(plot,dwphat)
