--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: dwp
 Type: Package
 Title: Density-Weighted Proportion
-Version: 1.1
-Date: 2023-06-30
+Version: 1.2
+Date: 2025-05-23
 Authors@R: c(
     person("Daniel", "Dalthorp", , "ddalthorp@protonmail.com", c("aut", "cre")),
     person("Manuela", "Huso", , "mhuso@usgs.gov", "aut"))
-Description: Fit a Poisson regression to carcass distance data and integrate over the searched area at a wind farm to estimate the fraction of carcasses falling in the searched area and format the output for use as the dwp parameter in the 'GenEst' or 'eoa' package for estimating bird and bat mortality, following Dalthorp, et al. (2022) <arXiv:2201.10064>.
+Description: Fit a Poisson regression to carcass distance data and integrate over the searched area at a wind farm to estimate the fraction of carcasses falling in the searched area and format the output for use as the dwp parameter in the 'GenEst' or 'eoa' package for estimating bird and bat mortality, following Dalthorp, et al. (2024) <doi:10.3133/tm7A3>.
 Depends: R (>= 3.6.0)
 License: CC0
 LazyData: true
@@ -28,6 +28,4 @@ Imports:
     sf,
     statmod,
     VGAM
-Suggests:
-    gpclib
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.2
